--- a/tf-onnx-Pad-OP.ipynb
+++ b/tf-onnx-Pad-OP.ipynb
@@ -182,6 +182,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image:\n",
+      "[[[[ 1.]\n",
+      "   [ 2.]\n",
+      "   [ 3.]\n",
+      "   [ 4.]]\n",
+      "\n",
+      "  [[ 5.]\n",
+      "   [ 6.]\n",
+      "   [ 7.]\n",
+      "   [ 8.]]\n",
+      "\n",
+      "  [[ 9.]\n",
+      "   [10.]\n",
+      "   [11.]\n",
+      "   [12.]]\n",
+      "\n",
+      "  [[13.]\n",
+      "   [14.]\n",
+      "   [15.]\n",
+      "   [16.]]]]\n",
+      "reslut:\n",
+      "[[[[ 6.]\n",
+      "   [ 8.]]\n",
+      "\n",
+      "  [[14.]\n",
+      "   [16.]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import tensorflow as tf\n",
+    " \n",
+    "a=tf.constant([\n",
+    "        [[1.0,2.0,3.0,4.0],\n",
+    "        [5.0,6.0,7.0,8.0],\n",
+    "        [9.0,10.0,11.0,12.0],\n",
+    "        [13.0,14.0,15.0,16.0]]\n",
+    "\n",
+    "    ])\n",
+    " \n",
+    "a=tf.reshape(a,[1,4,4,1])\n",
+    " \n",
+    "pooling=tf.nn.max_pool(a,[1,2,2,1],[1,2,2,1],padding='VALID')\n",
+    "with tf.Session() as sess:\n",
+    "    print(\"image:\")\n",
+    "    image=sess.run(a)\n",
+    "    print (image)\n",
+    "    print(\"reslut:\")\n",
+    "    result=sess.run(pooling)\n",
+    "    print (result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image:\n",
+      "[[[[ 1.]\n",
+      "   [ 2.]\n",
+      "   [ 3.]\n",
+      "   [ 4.]]\n",
+      "\n",
+      "  [[ 5.]\n",
+      "   [ 6.]\n",
+      "   [ 7.]\n",
+      "   [ 8.]]\n",
+      "\n",
+      "  [[ 9.]\n",
+      "   [10.]\n",
+      "   [11.]\n",
+      "   [12.]]\n",
+      "\n",
+      "  [[13.]\n",
+      "   [14.]\n",
+      "   [15.]\n",
+      "   [16.]]]]\n",
+      "reslut:\n",
+      "[[[[ 1.]\n",
+      "   [ 3.]]\n",
+      "\n",
+      "  [[ 9.]\n",
+      "   [11.]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import tensorflow as tf\n",
+    " \n",
+    "X=tf.constant([\n",
+    "        [[1.0,2.0,3.0,4.0],\n",
+    "        [5.0,6.0,7.0,8.0],\n",
+    "        [9.0,10.0,11.0,12.0],\n",
+    "        [13.0,14.0,15.0,16.0]]\n",
+    "\n",
+    "    ])\n",
+    "X=tf.reshape(X,[1,4,4,1])\n",
+    " \n",
+    "pooling1=tf.nn.max_pool(X,[1,1,1,1],[1,2,2,1],padding='SAME')\n",
+    "with tf.Session() as sess:\n",
+    "    print(\"image:\")\n",
+    "    image1=sess.run(X)\n",
+    "    print (image1)\n",
+    "    print(\"reslut:\")\n",
+    "    result1=sess.run(pooling1)\n",
+    "    print (result1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
