--- a/test/tf-onnx-Pad-OP.ipynb
+++ b/test/tf-onnx-Pad-OP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -10,40 +10,43 @@
      "output_type": "stream",
      "text": [
       "x:\n",
-      " [[[[0.]\n",
-      "   [0.]]\n",
+      " [[[[1.]\n",
+      "   [1.]]\n",
       "\n",
-      "  [[0.]\n",
-      "   [0.]]]]\n",
+      "  [[1.]\n",
+      "   [1.]]]]\n",
       "y:\n",
-      " [[[[1.2 1.2 1.2 1.2 1.2 1.2 1.2 1.2]\n",
-      "   [1.2 1.2 1.2 0.  1.2 1.2 1.2 1.2]\n",
-      "   [1.2 1.2 1.2 0.  1.2 1.2 1.2 1.2]\n",
-      "   [1.2 1.2 1.2 1.2 1.2 1.2 1.2 1.2]\n",
-      "   [1.2 1.2 1.2 1.2 1.2 1.2 1.2 1.2]]\n",
+      " [[[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
       "\n",
-      "  [[1.2 1.2 1.2 1.2 1.2 1.2 1.2 1.2]\n",
-      "   [1.2 1.2 1.2 0.  1.2 1.2 1.2 1.2]\n",
-      "   [1.2 1.2 1.2 0.  1.2 1.2 1.2 1.2]\n",
-      "   [1.2 1.2 1.2 1.2 1.2 1.2 1.2 1.2]\n",
-      "   [1.2 1.2 1.2 1.2 1.2 1.2 1.2 1.2]]]]\n"
+      "  [[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0. 0. 0. 0. 0.]]]]\n",
+      "y.shape: (1, 2, 5, 8)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "x = np.zeros([1,2,2,1])\n",
+    "x = np.ones([1,2,2,1])\n",
     "print(\"x:\\n\",x)\n",
     "\n",
     "y = np.pad(\n",
     "    x,\n",
     "    pad_width=((0, 0), (0, 0), (1, 2), (3, 4)),\n",
     "    mode='constant',\n",
-    "    constant_values=1.2,\n",
+    "    constant_values=0,\n",
     ")\n",
     "\n",
     "print(\"y:\\n\",y)\n",
+    "\n",
+    "print(\"y.shape:\",y.shape)\n",
     "\n",
     "\n"
    ]
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -301,6 +304,69 @@
     "    print(\"reslut:\")\n",
     "    result1=sess.run(pooling1)\n",
     "    print (result1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0]\n",
+      " [3 3]\n",
+      " [3 3]\n",
+      " [0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array( [[0, 0],[3, 3],[3, 3],[0, 0]])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 3, 3, 0],\n",
+       "       [0, 3, 3, 0]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.transpose()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 3, 3, 0, 0, 3, 3, 0]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.transpose().reshape((1,8))"
    ]
   },
   {
